--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,14 @@ version: '2'
 services:
   web:
     build: .
-    command: 'nodemon --watch server.js'
+    command: 'nodemon --watch app --inspect server.js'
     ports:
       - "5000:5000"
     env_file: .env
     depends_on:
       - db
     volumes:
-      - ./app:/opt/app
+      - ./app:/app
     networks:
       - mythril
 
